fix email signup banner on mobile

--- a/assets/section-email-signup-banner.css
+++ b/assets/section-email-signup-banner.css
@@ -30,7 +30,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .email-signup-banner .banner__box:not(.email-signup-banner__box--no-image) {
+  .email-signup-banner:not(.banner--mobile-bottom) .banner__box:not(.email-signup-banner__box--no-image) {
     background-color: transparent;
     --color-foreground: 255, 255, 255;
     --color-button: 255, 255, 255;
